# dftoolbox

./: CMakeLists.txt  Makefile  NEWS  README  README.md  SConstruct  TODO  build-zip.sh  df-directories.txt  df-directory.txt  dfmodtool.rc  dftoolbox-default.ini  dftoolbox.rc  guix.scm
dftoolbox/: README  build-zip.sh  dftoolbox.ini
dftoolbox/mods/skribb_zoe_alternate/: info.txt
dftoolbox/mods/skribb_zoe_new_underwear/: info.txt
dftoolbox/src/: cir.cpp  config.hpp  dds.hpp  ddstool.cpp  dfmodactivator.hpp  dialog-fix.cpp  dialog_manager.hpp  dialog_view.hpp  dreamfall_file_entry.cpp  dreamfall_file_entry.hpp  export_dialog.cpp  icons.cpp  insert.cpp  pak_insert_thread.hpp  searchbar.cpp  shark3d.hpp  shark3d_main.cpp  system.cpp  system.hpp  util.cpp  xrc.cpp
dftoolbox/utils/: filenamevalidity.rb  generatetable.rb  hashtable2.rb  scripts.rb
doc/: blatt01.df  filetypes.txt  perch.txt  perchscript.txt
htdocs/: default.css  index.html  logo.xcf
icons/: dftoolbox-icon.xcf
mods/skribb_april_degothed/: info.txt
mods/skribb_green_grubbers/: info.txt
mods/skribb_zoe_green_eyes/: info.txt
src/: about_dialog.hpp  bundle.cpp  cir.cpp  config.cpp  config.hpp  data_manager.cpp  data_manager.hpp  dds.hpp  ddstool.cpp  dfmodactivator.cpp  dfmodactivator.hpp  dftoolbox.cpp  dftoolbox.hpp  dialog-fix.cpp  dialog.cpp  dialog.hpp  dialog_manager.hpp  dialog_view.cpp  dialog_view.hpp  directory_view.cpp  directory_view.hpp  dreamfall_file_entry.cpp  dreamfall_file_entry.hpp  export_dialog.cpp  export_dialog.hpp  extract.cpp  extract.hpp  gui_progress_logger.hpp  icons.cpp  icons.hpp  image_view.cpp  image_view.hpp  insert.cpp  location.cpp  location.hpp  num2bin.cc  pak_insert_dialog.cpp  pak_insert_dialog.hpp  pak_insert_thread.cpp  pak_insert_thread.hpp  (+35 more)
utils/: hashtable.rb
